<resources>
    <string name="app_name">Food App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="text_name">Hi, %1$s !</string>
    <string name="text_default_username">Hi, Guest !</string>
    <string name="text_greetings">What do you want to eat today ?</string>
    <string name="text_tittle_list">Our Menus</string>
    <string name="text_tittle_categories">Categories</string>
    <string name="hint_name">Name</string>
    <string name="text_name_profile">Safitri</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_username">Username</string>
    <string name="text_username">Safitri Kurnia</string>
    <string name="text_hint_email">Email</string>
    <string name="text_email">safitri.suardini@gmail.com</string>
    <string name="text_tittle_profile">Profile</string>
    <string name="text_total_price">Tambahkan ke Keranjang - %1$s</string>
    <string name="text_add_to_cart_success">Add to Cart Success !</string>
    <string name="add_to_cart_failed">Add to Cart Failed !</string>
    <string name="text_location">Lokasi</string>
    <string name="text_delivery_options">Delivery Options</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_options">Payment Options</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="text_title_order_confirmation">Order Confirmation</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_hint_notes">Notes :</string>
    <string name="text_title_your_cart">Your Cart</string>
    <string name="text_name_total_price">Total Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_quantity">x%s\n</string>
    <string name="text_cart_is_empty">Fill up your lonely cart with good food!</string>
    <string name="text_total_item">Total Price</string>
    <string name="text_btn_close">Close</string>
    <string name="text_done">Please wait for your food...</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">SIGN UP</string>
    <string name="text_already_have_an_account_click_here">Have an account already? Login Here</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_log_in">LOGIN</string>
    <string name="text_check_out_error">Checkout Error !</string>
    <string name="text_error_password_empty">Error! Password is Empty</string>
    <string name="text_error_password_less_than_8_char">Error ! Password less than 8 character</string>
    <string name="text_error_email_empty">Error! Email is Empty</string>
    <string name="text_error_email_invalid">Error! Email invalid</string>
    <string name="text_password_does_not_match">Sorry, Password does not match..</string>
    <string name="text_error_name_cannot_empty">Name can\'t be Empty</string>
    <string name="text_logout">Logout</string>
    <string name="text_change_name">Change Your Name</string>
    <string name="text_change_email">Change Your Email</string>
    <string name="text_save">Save</string>
    <string name="text_edit">Edit</string>
    <string name="text_success_notif">Update Profile Success</string>
    <string name="text_detail_menu">Detail Menu</string>
    <string name="text_desc_banner">Pesan makanan favoritmu sekarang !</string>
    <string name="text_title_banner">Disc 50 %</string>
</resources>